<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/ciekawe_miejsca" />

    <ImageView
        android:id="@+id/imageViewOfCat"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/photoofthecat"
        app:srcCompat="@drawable/muzeum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008080"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#008080"
            android:text="@string/polub" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#008080"
            android:textColor="@color/white"
            android:text="@string/usu" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#008080"
            android:textColor="@color/white"
            android:text="@string/zapisz" />

        <Button
            android:id="@+id/btnPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#008080"
            android:textColor="@color/white"
            android:text="@string/miejsca" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLikes"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:text="0 polubień" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#808080"
        android:layout_height="1dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/opis" />

    <TextView
        android:id="@+id/textViewPlaceInYourArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#808080"
        android:text="@string/odwied_ciekawe_miejsce_w_twoim_mie_cie" />

    <ListView
        android:id="@+id/listViewSavedPlace"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>